--- a/springboot-blog-rest-api/src/main/resources/application.properties
+++ b/springboot-blog-rest-api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/myblog
+spring.datasource.username=root
+spring.datasource.password=des20sislav10
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
