implementing basic authentication
implementing basic authentication using spring security

--- a/springboot-blog-rest-api/src/main/resources/application.properties
+++ b/springboot-blog-rest-api/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=des20sislav10
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=deso
+spring.security.user.password=deso
+spring.security.user.roles=ADMIN
